<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.oreon</groupId>
  <artifactId>oreon-engine</artifactId>
  <packaging>pom</packaging>
  <version>${oreon.version}</version>
  
  <properties>
	<maven.compiler.source>1.8</maven.compiler.source>
	<maven.compiler.target>1.8</maven.compiler.target>
	<lwjgl.version>3.1.7-SNAPSHOT</lwjgl.version>
	<oreon.version>3.0.0</oreon.version>
  </properties>
  
  <repositories>
	<repository>
		<id>sonatype-snapshots</id>
		<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		<releases><enabled>false</enabled></releases>
		<snapshots><enabled>true</enabled></snapshots>
	</repository>
  </repositories>

  <dependencies>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl</artifactId>
		<version>${lwjgl.version}</version>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-assimp</artifactId>
		<version>${lwjgl.version}</version>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-glfw</artifactId>
		<version>${lwjgl.version}</version>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-jemalloc</artifactId>
		<version>${lwjgl.version}</version>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-openal</artifactId>
		<version>${lwjgl.version}</version>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-opengl</artifactId>
		<version>${lwjgl.version}</version>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-vulkan</artifactId>
		<version>${lwjgl.version}</version>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-stb</artifactId>
		<version>${lwjgl.version}</version>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl</artifactId>
		<version>${lwjgl.version}</version>
		<classifier>${lwjgl.natives}</classifier>
		<scope>runtime</scope>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-assimp</artifactId>
		<version>${lwjgl.version}</version>
		<classifier>${lwjgl.natives}</classifier>
		<scope>runtime</scope>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-glfw</artifactId>
		<version>${lwjgl.version}</version>
		<classifier>${lwjgl.natives}</classifier>
		<scope>runtime</scope>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-jemalloc</artifactId>
		<version>${lwjgl.version}</version>
		<classifier>${lwjgl.natives}</classifier>
		<scope>runtime</scope>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-openal</artifactId>
		<version>${lwjgl.version}</version>
		<classifier>${lwjgl.natives}</classifier>
		<scope>runtime</scope>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-opengl</artifactId>
		<version>${lwjgl.version}</version>
		<classifier>${lwjgl.natives}</classifier>
		<scope>runtime</scope>
	</dependency>
	<dependency>
		<groupId>org.lwjgl</groupId>
		<artifactId>lwjgl-stb</artifactId>
		<version>${lwjgl.version}</version>
		<classifier>${lwjgl.natives}</classifier>
		<scope>runtime</scope>
	</dependency>
	<dependency>
    <groupId>log4j</groupId>
	    <artifactId>log4j</artifactId>
	    <version>1.2.17</version>
	</dependency>
	<dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>1.18.2</version>
    </dependency>
  </dependencies>

  <profiles>
	<profile>
		<id>lwjgl-natives-linux</id>
		<activation>
			<os><family>unix</family></os>
		</activation>
		<properties>
			<lwjgl.natives>natives-linux</lwjgl.natives>
		</properties>
	</profile>
	<profile>
		<id>lwjgl-natives-macos</id>
		<activation>
			<os><family>mac</family></os>
		</activation>
		<properties>
			<lwjgl.natives>natives-macos</lwjgl.natives>
		</properties>
	</profile>
	<profile>
		<id>lwjgl-natives-windows</id>
		<activation>
			<os><family>windows</family></os>
		</activation>
		<properties>
			<lwjgl.natives>natives-windows</lwjgl.natives>
		</properties>
	</profile>
  </profiles>
  
  <modules>
  		<module>oe-core</module>
  		<module>oe-core-opengl</module>
  		<module>oe-core-vulkan</module>
  		<module>oe-gl-components</module>
  		<module>oe-gl-engine</module>
  		<module>oe-vk-components</module>
  		<module>oe-vk-engine</module>
  		<module>oe-common-world</module>
		<module>oe-common-ui</module>
		<module>examples-opengl</module>
		<module>examples-vulkan</module>
  </modules>

</project>